Eventdisplay => settings button Corrected alignement bug for header of event display

--- a/src/Cpt/MainBundle/Resources/public/css/cpt_calendar.css
+++ b/src/Cpt/MainBundle/Resources/public/css/cpt_calendar.css
@@ -99,7 +99,7 @@
 
 .cal_day_current_date > a
 {
-    color: gold;
+    font-weight: bold;
 }
 
 .cal_day_inmonth_withmyevents{
